--- a/shakespeare.html
+++ b/shakespeare.html
@@ -18,25 +18,25 @@
 
 
     <section id="sonnet">
-      <p><span class="capitalize">S</span> hall I compare thee to a summer’s day?</p>
-      <p><span class="capitalize">T</span>hou art more lovely and more temperate:</p>
-      <p><span class="capitalize">R</span>ough winds do shake the darling buds of May,</p>
-      <p><span class="capitalize">A</span>nd summer’s lease hath all too short a date;</p>
-      <p><span class="capitalize">S</span>ometime too hot the eye of heaven shines,</p>
-      <p><span class="capitalize">A</span>nd often is his gold complexion dimm'd;</p>
-      <p><span class="capitalize">A</span>nd every fair from fair sometime declines,</p>
-      <p><span class="capitalize">B</span>y chance or nature’s changing course untrimm'd;</p>
-      <p><span class="capitalize">B</span>ut thy eternal summer shall not fade,</p>
-      <p><span class="capitalize">N</span>or lose possession of that fair thou ow’st;</p>
-      <p><span class="capitalize">N</span>or shall death brag thou wander’st in his shade,</p>
-      <p><span class="capitalize">W</span>hen in eternal lines to time thou grow’st:</p>
-      <p><span class="capitalize">S</span>o long as men can breathe or eyes can see,</p>
-      <p><span class="capitalize">S</span>o long lives this, and this gives life to thee.</p>
+      <p>Shall I compare thee to a summer’s day?</p>
+      <p>Thou art more lovely and more temperate:</p>
+      <p>Rough winds do shake the darling buds of May,</p>
+      <p>And summer’s lease hath all too short a date;</p>
+      <p>Sometime too hot the eye of heaven shines,</p>
+      <p>And often is his gold complexion dimm'd;</p>
+      <p>And every fair from fair sometime declines,</p>
+      <p>By chance or nature’s changing course untrimm'd;</p>
+      <p>But thy eternal summer shall not fade,</p>
+      <p>Nor lose possession of that fair thou ow’st;</p>
+      <p>Nor shall death brag thou wander’st in his shade,</p>
+      <p>When in eternal lines to time thou grow’st:</p>
+      <p>So long as men can breathe or eyes can see,</p>
+      <p>So long lives this, and this gives life to thee.</p>
     </section>
     <p class=bottommessage>
       See the <a target="_blank" href="https://en.wikipedia.org/wiki/Shakespeare%27s_sonnets">Shakespeare's sonnets</a> Wikipedia article for more information
     </p>
-  
+
 
   </main>
 </body>
