--- a/shakespeare.html
+++ b/shakespeare.html
@@ -1,10 +1,10 @@
-<link href="cascade.css" rel="stylesheet">
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="cascade.css" rel="stylesheet">
   <meta charset="utf-8">
   <title>
-
+    CSS Reverse Engineering
   </title>
 </head>
 <body >
@@ -14,30 +14,28 @@
     <h1>Shakespeare's Sonnet #18</h1>
 
     <section id="intro">This is one of the most famous of the sonnets.  It is referenced in the film Dead Poets
-    Society and gave names to the band Darling Buds book and television series The Darling Buds of May. Read it and weep! </section>
+      Society and gave names to the band Darling Buds book and television series The Darling Buds of May. Read it and weep! </section>
 
 
-    <section id="sonnet">
-      <p>Shall I compare thee to a summer’s day?</p>
-      <p>Thou art more lovely and more temperate:</p>
-      <p>Rough winds do shake the darling buds of May,</p>
-      <p>And summer’s lease hath all too short a date;</p>
-      <p>Sometime too hot the eye of heaven shines,</p>
-      <p>And often is his gold complexion dimm'd;</p>
-      <p>And every fair from fair sometime declines,</p>
-      <p>By chance or nature’s changing course untrimm'd;</p>
-      <p>But thy eternal summer shall not fade,</p>
-      <p>Nor lose possession of that fair thou ow’st;</p>
-      <p>Nor shall death brag thou wander’st in his shade,</p>
-      <p>When in eternal lines to time thou grow’st:</p>
-      <p>So long as men can breathe or eyes can see,</p>
-      <p>So long lives this, and this gives life to thee.</p>
-    </section>
-    <p class=bottommessage>
-      See the <a target="_blank" href="https://en.wikipedia.org/wiki/Shakespeare%27s_sonnets">Shakespeare's sonnets</a> Wikipedia article for more information
-    </p>
-
-
-  </main>
-</body>
-</html>
+      <section id="sonnet">
+        <p>Shall I compare thee to a summer’s day?</p>
+        <p>Thou art more lovely and more temperate:</p>
+        <p>Rough winds do shake the darling buds of May,</p>
+        <p>And summer’s lease hath all too short a date;</p>
+        <p>Sometime too hot the eye of heaven shines,</p>
+        <p>And often is his gold complexion dimm'd;</p>
+        <p>And every fair from fair sometime declines,</p>
+        <p>By chance or nature’s changing course untrimm'd;</p>
+        <p>But thy eternal summer shall not fade,</p>
+        <p>Nor lose possession of that fair thou ow’st;</p>
+        <p>Nor shall death brag thou wander’st in his shade,</p>
+        <p>When in eternal lines to time thou grow’st:</p>
+        <p>So long as men can breathe or eyes can see,</p>
+        <p>So long lives this, and this gives life to thee.</p>
+      </section>
+      <footer>
+        See the <a target="_blank" href="https://en.wikipedia.org/wiki/Shakespeare%27s_sonnets">Shakespeare's sonnets</a> Wikipedia article for more information
+      </footer>
+    </main>
+  </body>
+  </html>
